--- a/client/app/index.html
+++ b/client/app/index.html
@@ -19,9 +19,8 @@
     <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-<h1>כנסת פתוחה</h1>
-<h3>כל מיני שטויות והצבעות</h3>
-
+<h1>איזו מפלגה מצביעה כמוני?</h1>
+<h3>לפניך עשר הצעות חוק שהועלו בכנסת האחרונה. <br/> כיצה את/ה היית מצביע/ה?</h3>
 <div ui-view></div>
 
 <!-- In production use:
