Votes calculation works now. Returning an array ordered by the voter's best match.

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <h1>איזו מפלגה מצביעה כמוני?</h1>
-<h3>לפניך עשר הצעות חוק שהועלו בכנסת האחרונה. <br/> כיצה את/ה היית מצביע/ה?</h3>
+<h3>לפניך עשר הצעות חוק שהועלו בכנסת האחרונה. <br/> כיצד את/ה היית מצביע/ה?</h3>
 <div ui-view></div>
 
 <!-- In production use:
@@ -28,6 +28,7 @@
 -->
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="bower_components/lodash/dist/lodash.js"></script>
 <script src="app.js"></script>
 <script src="mainView/mainView.js"></script>
 </body>
