--- a/client/app/index.html
+++ b/client/app/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
     <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="assets/font-awesome-4.2.0/css/font-awesome.min.css">
     <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
