--- a/client/app/index.html
+++ b/client/app/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
     <link rel="stylesheet" href="app.css">
-    <link rel="stylesheet" href="assets/font-awesome-4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.min.css">
     <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
@@ -24,12 +24,9 @@
 <h3>לפניך עשר הצעות חוק שהועלו בכנסת האחרונה. <br/> כיצד את/ה היית מצביע/ה?</h3>
 <div ui-view></div>
 
-<!-- In production use:
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
--->
-<script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-<script src="bower_components/lodash/dist/lodash.js"></script>
+<script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+<script src="bower_components/lodash/dist/lodash.min.js"></script>
 <script src="app.js"></script>
 <script src="mainView/mainView.js"></script>
 </body>
